src/packages/Modal/styles.module.scss
@import "src/scss/globalDefines.scss";

.modalContentContainer {
  height: 90vh;
  overflow: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  padding: 24px;
  background-color: $alice-blue;
  box-shadow: 0px 0px 6px #00000029;
  border-radius: 8px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

